# SALT-VLA

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  CLAUDE.md  CODEX_HANDOFF.md  LATENT_CACHING.md  Makefile  QUICK_START.md  README.md  TESTING_SUMMARY.md  auto_tune.py  benchmark.py  direct_ssv2.sh  eval_distill_loss.py  final_test.py  kinetics.py  kinetics400.torrent  main.py  nitch-ui  onboard.skill  optimize_dataloader.py  progress.txt  pyproject.toml  requirements.txt  super_ssv2.sh  tune_vitl_variant.py
configs/: cache_ssv2.yaml  eval_ucf101.yaml  pretrain_ssv2.yaml
docs/: AGENT.md  ARCHITECTURE.md  DOCKER_CODEX_TRANSFER.md  EXPERIMENTS.md  OPERATIONS.md  STATUS.md  nvidia-modprobe.md
scripts/: __init__.py  bench_time_arrow_ssv2.py  build_cache_ssv2.sh  cache_teacher_latents.py  check_training_health.py  eval_distill_loss.py  eval_retrieval.sh  eval_ucf101.sh  log_hardware_temps.py  monitor_training.py  phase_a_smoke.sh  pretrain_ssv2.sh  queue_time_arrow_after_run.py  queue_training.py  queue_vitb_vitl.py  queue_vitl_10epoch_chain.sh  run_temporal_probe_suite.py  safety_test.py  train.py  ucf101_infer.sh  watch_metrics_and_queue_next.py
src/: train.py
tests/: check_alignment.py  conftest.py  test_cache_roundtrip.py  test_cached_dataset_integrity.py  test_dataloader_preflight.py  test_intphys2_eval.py  test_model_components.py  test_salt_dense_masking_mode.py  test_shapes_student.py  test_shapes_teacher.py  test_ssv2_dataset.py  test_temporal_probe_modes.py  test_temporal_probe_suite_script.py  test_time_arrow_probe.py  test_training_components.py  (+2 more)
(+62 files in other folders)
