[project]
name = "salt-vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "decord>=0.6.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "polars>=1.36.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I", "UP", "NPY", "TID"]
lint.ignore = ["E731"] # Allow lambdas for quick research transforms

[tool.ruff.lint.isort]
known-first-party = ["SALT-VLA"]
